text alignment fix for TIER

--- a/src/common/Player.scss
+++ b/src/common/Player.scss
@@ -55,7 +55,7 @@
         }
 
         &.tierItem {
-            margin: 0 .5rem -.1rem;
+            margin: -.1rem .5rem 0;
 
             .tierList {
                 padding: 0 0 .2rem .2rem;
